da uma colherada ai

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>5Rs</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <header></header>
-    <main></main>
+    <header>
+        <img src="img/logo.png" alt="logo ecologica">
+    </header>
+    <main>
+        <div class="centered-text">
+            <h1>5R's</h1>
+            <p>Faça do mundo um lugar mais ecológico</p>
+        </div>
+        <div class="bottom-text">
+            <ul>
+                <li>repensar</li>
+                <li>reduzir</li>
+                <li>recusar</li>
+                <li>reutilizar</li>
+                <li>reciclar</li>
+            </ul>
+        </div>
+    </main>
     <footer></footer>
 </body>
 </html>
