--- a/formulario.html
+++ b/formulario.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar Conta</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <img src="img/logo.png" alt="logo ecologica">
+    </header>
     <main>
         <form action="index.html">
 
