--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
             <p>Faça do mundo um lugar mais ecológico</p>
         </div>
         <div class="bottom-text">
-            <ul>
-                <li>repensar</li>
-                <li>reduzir</li>
-                <li>recusar</li>
-                <li>reutilizar</li>
-                <li>reciclar</li>
-            </ul>
+                <p>repensar</p>
+                <p>reduzir</p>
+                <p>recusar</p>
+                <p>reutilizar</p>
+                <p>reciclar</p>
         </div>
     </main>
     <footer></footer>
